--- a/.zimrc
+++ b/.zimrc
@@ -74,6 +74,9 @@ zmodule ohmyzsh/ohmyzsh --root plugins/kubectl
 # External modules
 # ----------------
 
+# History substring search (must be BEFORE syntax highlighting)
+zmodule zsh-users/zsh-history-substring-search
+
 # Fish-like autosuggestions for Zsh.
 zmodule zsh-users/zsh-autosuggestions
 
